button see all fixed on mobile, bigger slider

--- a/src/templates/projects/project/project.module.scss
+++ b/src/templates/projects/project/project.module.scss
@@ -55,8 +55,8 @@
 }
 
 .sliderContainer {
-  width: 48.75vw;
-  height: 23.438vw;
+  width: 1200px;
+  height: 550px;
 }
 
 @include tablet {
